Added POST CRUD along with login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,8 @@
 
 en:
   hello: "Hello world"
+  unauthorized: 'Access declined!!!'
+  invalid: "Invalid email/password"
+  jwt:
+    invalid: "Invalid token"
+    expired: "Token expired"
