Added tests for sessions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,5 +34,7 @@ en:
   unauthorized: 'Access declined!!!'
   invalid: "Invalid email/password"
   jwt:
-    invalid: "Invalid token"
-    expired: "Token expired"
+    bad_request: "Invalid token"
+    unauthorized: "Token expired"
+  post:
+    invalid_url: "Given URL is invalid" 
